Added a To do entry for the 3-site and N-site analytic R1rho models listed in Palmer and Massi 2006.
This is for the 'To do' section of the dispersion chapter of the user manual.

--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -31,6 +31,9 @@
 % The Computer Journal.
 @STRING{cj          = "Comp. J."}
 
+% Chemistry Review.
+@STRING{cr          = "Chem. Rev."}
+
 % European Journal of Biochemistry.
 @STRING{ejb         = "Eur. J. Biochem."}
 
@@ -5957,6 +5960,53 @@
   sourceid       = {ISI:A1991FP84400001},
   year           = 1991,
   doi            = {10.1021/ja00012a001}
+}
+
+@Article{PalmerMassi06,
+  Author         = {Palmer, 3rd, A. G. and Massi, F.},
+  Title          = {Characterization of the dynamics of biomacromolecules
+                   using rotating-frame spin relaxation {NMR}
+                   spectroscopy.},
+  Journal        = cr,
+  Volume         = {106},
+  Number         = {5},
+  Pages          = {1700-1719},
+  authoraddress  = {Department of Biochemistry and Molecular Biophysics,
+                   Columbia University, 630 West 168th Street, New York,
+                   New York 10032, USA. agp6@columbia.edu},
+  keywords       = {Kinetics ; Ligands ; Macromolecular
+                   Substances/chemistry ; Magnetic Resonance
+                   Spectroscopy/methods ; *Models, Chemical ; Molecular
+                   Structure ; Multiprotein Complexes/chemistry ; Protein
+                   Conformation ; Water/chemistry},
+  language       = {eng},
+  medline-aid    = {10.1021/cr0404287 [doi]},
+  medline-crdt   = {2006/05/11 09:00},
+  medline-da     = {20060510},
+  medline-dcom   = {20071113},
+  medline-edat   = {2006/05/11 09:00},
+  medline-fau    = {Palmer, Arthur G 3rd ; Massi, Francesca},
+  medline-gr     = {GM59273/GM/NIGMS NIH HHS/United States},
+  medline-is     = {0009-2665 (Print) ; 0009-2665 (Linking)},
+  medline-jid    = {2985134R},
+  medline-jt     = {Chemical reviews},
+  medline-lr     = {20071203},
+  medline-mhda   = {2007/11/14 09:00},
+  medline-own    = {NLM},
+  medline-pl     = {United States},
+  medline-pmid   = {16683750},
+  medline-pst    = {ppublish},
+  medline-pt     = {Journal Article ; Research Support, N.I.H., Extramural
+                   ; Review},
+  medline-rf     = {78},
+  medline-rn     = {0 (Ligands) ; 0 (Macromolecular Substances) ; 0
+                   (Multiprotein Complexes) ; 7732-18-5 (Water)},
+  medline-sb     = {IM},
+  medline-so     = {Chem Rev. 2006 May;106(5):1700-19.},
+  medline-stat   = {MEDLINE},
+  url            = {http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?cmd=prlinks&dbfrom=pubmed&retmode=ref&id=16683750},
+  doi            = {10.1021/cr0404287},
+  year           = 2006
 }
 
 @Article{Pawley01,
