Turned off the dw dispersion parameter constraints for the 'NS R1rho 3-site' models.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -1476,6 +1476,7 @@ and for the exchange rate and time parameters as
 \end{subequations}
 
 Note that the $\dw$ and $\dwH$ constraints are not used for any of the MMQ-type models as sign differentiation is possible.
+These constraints are also turned off for the `NS $\Ronerho$ 3-site linear' and `NS $\Ronerho$ 3-site' models.
 And that the $\pA \geqslant 0.85$ constraint is used instead of the $\pA \geqslant 0.5$ constraint for all models which require $\pA \gg \pB$.
 When not using the auto-analysis, constraints can be modified or turned off.
 
