Removed the pC <= pB constraint from the 3-site dispersion models.
This is important for the linear models where a violation of this constraint is reasonable.  This
has been replaced by the pC <= pA constraint.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -1460,10 +1460,9 @@ and for the exchange rate and time parameters as
     \dwHAB \geqslant 0, \\
     \dwHBC \geqslant 0, \\
     \pA\dw^2 \geqslant 0, \\
-    \pA \geqslant 0, \\
-    \pB \geqslant 0, \\
-    \pC \geqslant 0, \\
-    \pC \leqslant \pB \leqslant \pA \leqslant 1, \\
+    0 \leqslant \pA \leqslant 1, \\
+    0 \leqslant \pB \leqslant \pA, \\
+    0 \leqslant \pC \leqslant \pA, \\
     \pA \geqslant 0.85 \quad (\textrm{the skewed condition, } \pA \gg \pB), \\
     0 \leqslant \kex \leqslant 2e^6, \\
     0 \leqslant \kexAB \leqslant 2e^6, \\
