--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -67,8 +67,8 @@ TAP03                       & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \
 TP04                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 MP05                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 NS $\Ronerho$ 2-site        & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \yes \\
-NS $\Ronerho$ 3-site linear & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
-NS $\Ronerho$ 3-site        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+NS $\Ronerho$ 3-site linear & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
+NS $\Ronerho$ 3-site        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 
 \midrule
 \vspace{-5pt} \\
