--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -40,6 +40,7 @@
 % Better maths.
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{mathdots}
 
 % Source code and scripts.
 \usepackage[procnames]{listings}
@@ -181,7 +182,13 @@
 \newcommand{\PhiexC}{\Phi_\textrm{ex,C}}
 \newcommand{\Phiexi}{\Phi_\textrm{ex,i}}
 \newcommand{\Rex}{\mathrm{R}_\textrm{ex}}
+\newcommand{\RoneA}{\mathrm{R}_\textrm{1A}}
+\newcommand{\RoneB}{\mathrm{R}_\textrm{1B}}
+\newcommand{\RoneC}{\mathrm{R}_\textrm{1C}}
 \newcommand{\Ronerhoprime}{\mathrm{R}_{1\rho}'}
+\newcommand{\RonerhoprimeA}{\mathrm{R}_{1\rho A}'}
+\newcommand{\RonerhoprimeB}{\mathrm{R}_{1\rho B}'}
+\newcommand{\RonerhoprimeC}{\mathrm{R}_{1\rho C}'}
 \newcommand{\Rtwoeff}{\mathrm{R}_\textrm{2eff}}
 \newcommand{\Rtwozero}{\mathrm{R}_2^0}
 \newcommand{\RtwozeroA}{\mathrm{R}_\mathrm{2A}^0}
