--- a/docs/latex/dispersion_models.tex
+++ b/docs/latex/dispersion_models.tex
@@ -75,10 +75,10 @@ TAP03                    & Analytic & 2     & $\{\Ronerhoprime, \dots, \pA, \dw,
 TP04\footnotemark[1]     & Analytic & N     & $\{\Ronerhoprime, \dots, \pone, \dots, \pN, \aveomega, \konetwo, \dots\, \koneN\}$    & One site dominant        & \citet{TrottPalmer04} \\
 MP05                     & Analytic & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$          & $\pA > \pB$                       & \citet{MiloushevPalmer05} \\
 NS R1rho 2-site          & Numeric  & 2     & $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$          & $\pA > \pB$                       & - \\
-NS R1rho 3-site linear\footnotemark[1] & Numeric & 3    & $\{\Ronerhoprime, \dots, \pA, \pB, \dwAB, \dwBC,$   & $\pA > \pB$ and $\pA > \pC$       & - \\
-                         &          &       & $\dwHAB, \dwHBC, \kexAB, \kexBC\}$ \\
-NS R1rho 3-site\footnotemark[1]        & Numeric & 3    & $\{\Ronerhoprime, \dots, \pA, \pB, \dwAB, \dwBC,$   & $\pA > \pB$ and $\pA > \pC$       & - \\
-                         &          &       & $\dwHAB, \dwHBC, \kexAB, \kexBC, \kexAC\}$ \\
+NS R1rho 3-site linear   & Numeric  & 3     & $\{\Ronerhoprime, \dots, \pA, \pB, \dwAB, \dwBC,$   & $\pA > \pB$ and $\pA > \pC$       & - \\
+                         &          &       & $\kexAB, \kexBC\}$ \\
+NS R1rho 3-site          & Numeric  & 3     & $\{\Ronerhoprime, \dots, \pA, \pB, \dwAB, \dwBC,$   & $\pA > \pB$ and $\pA > \pC$       & - \\
+                         &          &       & $\kexAB, \kexBC, \kexAC\}$ \\
 
 \footnotetext[1]{Not implemented yet}
 
