Transposed some of the 'NS R1rho 3-site' model evolution matrix elements.
These now match the 'NS R1rho 2-site' model.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -1177,31 +1177,31 @@ The relaxation evolution matrix is defined as
            \cdots & 0                         & \omegaone                 & -\RoneC-\kCA-\kCB \\
          \end{pmatrix} \nonumber \\
       &+ \begin{pmatrix}
-                   &         &         & \kAB    & 0       & 0       & \cdots \\
-                   & \ddots  &         & 0       & \kAB    & 0       & \cdots \\
-                   &         &         & 0       & 0       & \kAB    & \cdots \\
-           \kBA    & 0       & 0       &         &         &         & \\
-           0       & \kBA    & 0       &         & \ddots  &         & \cdots\\
-           0       & 0       & \kBA    &         &         &         & \\
+                   &         &         & \kBA    & 0       & 0       & \cdots \\
+                   & \ddots  &         & 0       & \kBA    & 0       & \cdots \\
+                   &         &         & 0       & 0       & \kBA    & \cdots \\
+           \kAB    & 0       & 0       &         &         &         & \\
+           0       & \kAB    & 0       &         & \ddots  &         & \cdots\\
+           0       & 0       & \kAB    &         &         &         & \\
            \vdots  & \vdots  & \vdots  &         & \vdots  &         & \ddots \\
          \end{pmatrix} \nonumber \\
       &+ \begin{pmatrix}
-                   &         &         & \cdots  & \kAC    & 0       & 0 \\
-                   & \ddots  &         & \cdots  & 0       & \kAC    & 0 \\
-                   &         &         & \cdots  & 0       & 0       & \kAC \\
+                   &         &         & \cdots  & \kCA    & 0       & 0 \\
+                   & \ddots  &         & \cdots  & 0       & \kCA    & 0 \\
+                   &         &         & \cdots  & 0       & 0       & \kCA \\
            \vdots  & \vdots  & \vdots  & \ddots  & \vdots  & \vdots  & \vdots \\
-           \kCA    & 0       & 0       & \cdots  &         &         & \\
-           0       & \kCA    & 0       & \cdots  &         & \ddots  &  \\       
-           0       & 0       & \kCA    & \cdots  &         &         & \\
+           \kAC    & 0       & 0       & \cdots  &         &         & \\
+           0       & \kAC    & 0       & \cdots  &         & \ddots  &  \\       
+           0       & 0       & \kAC    & \cdots  &         &         & \\
          \end{pmatrix} \nonumber \\
       &+ \begin{pmatrix}
            \ddots  &         & \vdots  &         & \vdots  & \vdots  & \vdots \\
-                   &         &         &         & \kBC    & 0       & 0 \\
-           \cdots  &         & \ddots  &         & 0       & \kBC    & 0 \\
-                   &         &         &         & 0       & 0       & \kBC \\
-           \cdots  & \kCB    & 0       & 0       &         &         &  \\
-           \cdots  & 0       & \kCB    & 0       &         & \ddots  &  \\
-           \cdots  & 0       & 0       & \kCB    &         &         &  \\
+                   &         &         &         & \kCB    & 0       & 0 \\
+           \cdots  &         & \ddots  &         & 0       & \kCB    & 0 \\
+                   &         &         &         & 0       & 0       & \kCB \\
+           \cdots  & \kBC    & 0       & 0       &         &         &  \\
+           \cdots  & 0       & \kBC    & 0       &         & \ddots  &  \\
+           \cdots  & 0       & 0       & \kBC    &         &         &  \\
          \end{pmatrix},
 \end{align}
 
@@ -1244,22 +1244,22 @@ The equations are the same as for the `NS R1rho 3-site' model except for the rel
            \cdots & 0                    & \omegaone            & -\RoneC-\kCB \\
          \end{pmatrix} \nonumber \\
       &+ \begin{pmatrix}
-                   &         &         & \kAB    & 0       & 0       & \cdots \\
-                   & \ddots  &         & 0       & \kAB    & 0       & \cdots \\
-                   &         &         & 0       & 0       & \kAB    & \cdots \\
-           \kBA    & 0       & 0       &         &         &         & \\
-           0       & \kBA    & 0       &         & \ddots  &         & \cdots\\
-           0       & 0       & \kBA    &         &         &         & \\
+                   &         &         & \kBA    & 0       & 0       & \cdots \\
+                   & \ddots  &         & 0       & \kBA    & 0       & \cdots \\
+                   &         &         & 0       & 0       & \kBA    & \cdots \\
+           \kAB    & 0       & 0       &         &         &         & \\
+           0       & \kAB    & 0       &         & \ddots  &         & \cdots\\
+           0       & 0       & \kAB    &         &         &         & \\
            \vdots  & \vdots  & \vdots  &         & \vdots  &         & \ddots \\
          \end{pmatrix} \nonumber \\
       &+ \begin{pmatrix}
            \ddots  &         & \vdots  &         & \vdots  & \vdots  & \vdots \\
-                   &         &         &         & \kBC    & 0       & 0 \\
-           \cdots  &         & \ddots  &         & 0       & \kBC    & 0 \\
-                   &         &         &         & 0       & 0       & \kBC \\
-           \cdots  & \kCB    & 0       & 0       &         &         &  \\
-           \cdots  & 0       & \kCB    & 0       &         & \ddots  &  \\
-           \cdots  & 0       & 0       & \kCB    &         &         &  \\
+                   &         &         &         & \kCB    & 0       & 0 \\
+           \cdots  &         & \ddots  &         & 0       & \kCB    & 0 \\
+                   &         &         &         & 0       & 0       & \kCB \\
+           \cdots  & \kBC    & 0       & 0       &         &         &  \\
+           \cdots  & 0       & \kBC    & 0       &         & \ddots  &  \\
+           \cdots  & 0       & 0       & \kBC    &         &         &  \\
          \end{pmatrix},
 \end{align}
 
