Last fixes for the 'NS R1rho 3-site' dispersion models.
These now behave identically to the cpmg_fit program with the PEAK_SHIFT flag disabled.  The tilt
angle for the initial magnetisation is no longer that for the average offset but that of state A.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -1151,7 +1151,7 @@ The $\Ronerho$ value for state A magnetisation is defined as
 where
 \begin{align}
     M_0    &= \begin{pmatrix} \sin{\theta} \\ 0 \\ \cos{\theta} \\ 0 \\ 0 \\ 0 \\ 0 \\ 0 \\ 0  \end{pmatrix}, \\
-    \theta &= \arctan \left( \frac{\omegaone}{\aveoffset} \right).
+    \theta &= \arctan \left( \frac{\omegaone}{\offsetA} \right).
 \end{align}
 
 This assumes that the starting magnetisation has an X and Z component only for the A state.
