--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -135,6 +135,9 @@
 \newcommand{\KL}{\Delta_{\scriptscriptstyle \text{K-L}}}
 
 \newcommand{\aveoffset}{\bar\Omega}
+\newcommand{\offsetA}{\Omega_\textrm{A}}
+\newcommand{\offsetB}{\Omega_\textrm{B}}
+\newcommand{\offsetC}{\Omega_\textrm{C}}
 \newcommand{\aveomega}{\bar\omega}
 \newcommand{\dw}{\Delta\omega}
 \newcommand{\dwAB}{\Delta\omega_\textrm{AB}}
