Added the Omega_A,B,C resonance offset parameter definitions to the dispersion chapter of the manual.

--- a/docs/latex/dispersion_params.tex
+++ b/docs/latex/dispersion_params.tex
@@ -32,6 +32,9 @@ $\RtwozeroA$       & -                              & $\Rtwo$ relaxation rate fo
 $\RtwozeroB$       & -                              & $\Rtwo$ relaxation rate for state B in the absence of exchange                & rad.s$^{-1}$ \\
 $\Ronerhoprime$    & -                              & $\Ronerho$ relaxation rate in the absence of exchange                         & rad.s$^{-1}$ \\
 $\aveoffset$       & $\aveomega - \omegarf$         & The average resonance offset in the rotating frame                            & rad.s$^{-1}$ \\
+$\offsetA$         & $\omegaA - \omegarf$           & The resonance offset in the rotating frame for state A                        & rad.s$^{-1}$ \\
+$\offsetB$         & $\omegaB - \omegarf$           & The resonance offset in the rotating frame for state B                        & rad.s$^{-1}$ \\
+$\offsetC$         & $\omegaC - \omegarf$           & The resonance offset in the rotating frame for state C                        & rad.s$^{-1}$ \\
 $\omegaA$          & -                              & The Larmor frequency of the spin in state A                                   & rad.s$^{-1}$ \\
 $\omegaB$          & -                              & The Larmor frequency of the spin in state B                                   & rad.s$^{-1}$ \\
 $\omegaC$          & -                              & The Larmor frequency of the spin in state C                                   & rad.s$^{-1}$ \\
