Updated the author list for the submitted paper for the relaxation dispersion analysis.

--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -5217,9 +5217,9 @@
 }
 
 @Article{Morin14,
-  author = {Morin, S. et al.},
+  author = {Morin, S. and Linnet, T. E. and Lescanne, M. and Schanda, P. and Thompson, G. S. and Tollinger, M. and Teilum, K. and Gagn\'e, S. and Marion, D. and Griesinger, C. and Blackledge, M. and d'Auvergne, E. J.},
   title = {relax: the analysis of biomolecular kinetics using {NMR} relaxation dispersion data},
-  journal = {In press},
+  journal = {Submitted},
   year = {2014}
 }
 
