Added the primary reference for relaxation dispersion in relax to the dispersion chapter of the manual.
This is the paper which is not published yet.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -16,6 +16,13 @@
 
 Relaxation dispersion is the experimental modulation of chemical exchange relaxation.  For the $\Ronerho$-type experiment in which the nucleus of interest is spin-locked, either the spin-lock field strength or the offset between the spin-lock pulse and the chemical shift of the spins is used to modulate the exchange.  For the CPMG-type experiment, varying the time between the pulses modules the exchange.  Both experiment types are handled by relax.
 
+The primary reference for the relaxation dispersion implemented in relax is:
+\begin{itemize}
+\item \bibentry{Morin14}
+\end{itemize}
+
+For other citations, please see the citation chapter on page~\pageref{ch: citations}.
+
 
 % The models.
 %~~~~~~~~~~~~
