Removed the single quantum R1rho-type data reference in the introduction of the dispersion chapter of the manual.
This is redundant as R1rho data is always single quantum.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -69,7 +69,7 @@ The modelling of relaxation dispersion data can hence be categorised into these 
 \label{sect: dispersion: implemented models}
 
 A number of analytic and numeric models are supported within relax.
-These cover single quantum (SQ) CPMG-type, single quantum (SQ) $\Ronerho$-type, and combined proton-heteronuclear single quantum (SQ), zero quantum (ZQ), double quantum (DQ) and multi quantum (MQ) CPMG-type experiments. 
+These cover single quantum (SQ) CPMG-type, combined proton-heteronuclear single quantum (SQ), zero quantum (ZQ), double quantum (DQ) and multi quantum (MQ) CPMG-type experiments, and $\Ronerho$-type.
 If the model you are interested in is not available, please see Section~\ref{sect: dispersion: model tutorial} on page~\pageref{sect: dispersion: model tutorial} for how you can add new models to relax.
 
 Models which are independent of the experiment type include:
